<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.example.taskado.fragments.Guest.LoginPageFragment"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        tools:ignore="MissingConstraints"
        >

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/opensansmedium"
            android:gravity="center"
            android:text="@string/app_name"
            android:textColor="@color/primary_color"
            android:textSize="30dp"
            android:textStyle="bold"
            tools:ignore="MissingConstraints">

        </TextView>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:fontFamily="@font/opensansregular"
            android:gravity="left"
            android:text="@string/login_sentnce"
            android:textColor="@color/grey"
            android:textSize="15dp"
            android:textStyle="bold"
            tools:ignore="MissingConstraints"
            android:layout_marginLeft="30dp">

        </TextView>

    </LinearLayout>
    <LinearLayout
        android:layout_marginTop="10dp"
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        >



        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:hint="@string/email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="32dp"
            app:endIconMode="clear_text"
            app:helperText="@string/required"
            android:id="@+id/title_email"
            >


            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/input_login_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:endIconMode="clear_text"
                android:maxLines="1"
                >

            </com.google.android.material.textfield.TextInputEditText>
        </com.google.android.material.textfield.TextInputLayout>

        <!-- Password input. -->
        <com.google.android.material.textfield.TextInputLayout

            android:id="@+id/title_password"

            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="32dp"
            android:hint="@string/password"

            app:helperText="@string/required"
            app:endIconMode="password_toggle"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:startIconDrawable="@drawable/ic_baseline_lock_open_24">

            <com.google.android.material.textfield.TextInputEditText

                android:id="@+id/input_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:maxLines="1" />

        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_width="match_parent"
            android:text="@string/forget_password"
            android:fontFamily="@font/opensansregular"
            android:textSize="15dp"
            android:gravity="left"
            android:textStyle="bold"
            android:layout_marginLeft="30dp"
            android:textColor="@color/grey"
            >

        </TextView>


        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/login_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="30dp"
            android:text="@string/login"
            android:textAllCaps="false"
            android:fontFamily="@font/opensansitalic"
            android:textColor="@color/white"
            android:backgroundTint="@color/primary_color"/>

        <TextView
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_width="match_parent"
            android:text="@string/no_account"
            android:fontFamily="@font/opensansregular"
            android:textSize="15dp"
            android:gravity="left"
            android:layout_marginLeft="30dp"
            android:textColor="@color/grey"
            android:id="@+id/register_page"
            >

        </TextView>
    </LinearLayout>

</LinearLayout>