<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.example.taskado.fragments.Users.DetailedPageFragment">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/task_description"
        android:textStyle="bold"
        android:textSize="30dp"
        android:gravity="center"
        android:background="@color/primary_color"
        android:textColor="@color/white"
        />
    <TextView
        android:layout_marginBottom="35dp"
        android:text="@string/title_of_task"
        android:textSize="25dp"
        android:textColor="@color/primary_color"
        android:gravity="center"
        android:id="@+id/task_title"
        android:layout_gravity="center"
        android:layout_width="125dp"
        android:layout_height="35dp" />

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >
        <androidx.appcompat.widget.LinearLayoutCompat
            android:orientation="vertical"
            android:layout_marginStart="5dp"
            android:layout_marginEnd="5dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/task_start_date"
                android:textSize="25dp"
                android:gravity="center"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="15dp"
                android:layout_marginStart="15dp"
                android:hint="@string/date_format"
                android:inputType="date"
                />
            <TextView
                android:textSize="15dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:text="@string/start_date_input"/>
        </androidx.appcompat.widget.LinearLayoutCompat>
        <androidx.appcompat.widget.LinearLayoutCompat
            android:orientation="vertical"
            android:layout_marginStart="5dp"
            android:layout_marginEnd="5dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <androidx.appcompat.widget.AppCompatTextView

                android:id="@+id/task_end_date"
                android:textSize="25dp"
                android:gravity="center"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:layout_marginEnd="15dp"
                android:hint="@string/date_format"
                android:inputType="date"
                />
            <TextView
                android:textSize="15dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:text="@string/end_date_input"/>

        </androidx.appcompat.widget.LinearLayoutCompat>
    </androidx.appcompat.widget.LinearLayoutCompat>

    <androidx.appcompat.widget.AppCompatTextView
        android:layout_gravity="center"
        android:gravity="center"
        android:id="@+id/task_description"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:color="@color/white"
        android:text ="@string/description"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="15dp"

        />

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="240dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="15dp"
        android:layout_marginTop="10dp"
        android:padding="0dp">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/task_mini_tasks_recycler"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            />
    </androidx.core.widget.NestedScrollView>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:orientation="vertical"
        android:layout_gravity="center"
        android:gravity="center"
        android:layout_marginStart="5dp"
        android:layout_marginEnd="5dp"
        android:layout_width="195dp"
        android:layout_height="wrap_content">
        <androidx.appcompat.widget.LinearLayoutCompat
            android:padding="3dp"
            android:layout_width="185dp"
            android:layout_height="wrap_content"
            android:gravity="left"
            android:layout_marginEnd="5dp"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            >
            <androidx.appcompat.widget.AppCompatTextView
                android:gravity="center"
                android:textSize="15dp"
                android:textColor="@color/black"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:text="@string/created_by"/>
            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/task_creator"
                android:gravity="center"
                android:layout_marginEnd="5dp"
                android:textSize="15dp"
                android:textColor="@color/black"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/Person"/>


        </androidx.appcompat.widget.LinearLayoutCompat>


        <androidx.appcompat.widget.LinearLayoutCompat
            android:padding="3dp"
            android:layout_height="wrap_content"
            android:layout_width="185dp"

            android:layout_marginEnd="10dp"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:layout_gravity="left"
            >

            <androidx.appcompat.widget.AppCompatTextView
                android:gravity="center"
                android:textSize="15dp"
                android:textColor="@color/black"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:text="@string/status"/>
            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/task_status"
                android:gravity="left"
                android:textSize="15dp"
                android:textColor="@color/black"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:hint="In progress"
                />
        </androidx.appcompat.widget.LinearLayoutCompat>
        <androidx.appcompat.widget.LinearLayoutCompat
            android:gravity="left"
            android:layout_gravity="left"
            android:padding="3dp"
            android:layout_width="185dp"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            >

            <androidx.appcompat.widget.AppCompatTextView
                android:gravity="left"
                android:textSize="15dp"
                android:textColor="@color/black"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:text="@string/ammount"/>
            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/task_minitask_amount"
                android:gravity="center"
                android:textSize="15dp"
                android:textColor="@color/black"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="5dp"
                android:hint="@string/zero"
                android:inputType="number"
                />
        </androidx.appcompat.widget.LinearLayoutCompat>
    </androidx.appcompat.widget.LinearLayoutCompat>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/task_updae"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:fontFamily="@font/opensansregular"
        android:text="@string/Update_Task"
        android:textAllCaps="false"
        app:backgroundTint="@color/primary_color">

    </com.google.android.material.button.MaterialButton>
    <!-- Task Description Input-->

</LinearLayout>