<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.example.taskado.fragments.Guest.EntryPageFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/app_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            android:textSize="40dp"
            android:textStyle="bold"
            android:textColor="@color/primary_color"
            android:fontFamily="@font/opensansmediumitalic"
            android:gravity="center"
            />


        <TextView
            android:id="@+id/main_paragraph"
            android:layout_marginTop="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/paragraph"
            android:fontFamily="@font/opensanslight"
            android:textColor="@color/grey"
            android:textStyle="bold"
            android:textSize="20dp"
            />

        <ImageView

            android:id="@+id/main_image"
            android:layout_marginTop="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_main_icon"
            />

        <androidx.appcompat.widget.AppCompatButton

            android:id="@+id/register_page_button"
            android:layout_marginTop="50dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/register"
            android:textAllCaps="false"
            android:fontFamily="@font/opensansitalic"
            android:textColor="@color/white"
            android:backgroundTint="@color/primary_color">

        </androidx.appcompat.widget.AppCompatButton>

        <androidx.appcompat.widget.AppCompatButton

            android:id="@+id/login_page_button"
            android:layout_marginTop="5dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/login"
            android:textAllCaps="false"
            android:fontFamily="@font/opensansitalic"
            android:textColor="@color/white"
            android:backgroundTint="@color/primary_color">

        </androidx.appcompat.widget.AppCompatButton>

    </LinearLayout>
</LinearLayout>