<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="120dp"
    android:layout_marginHorizontal="10dp"
    android:layout_marginVertical="12dp"
    app:cardCornerRadius="10dp"
    app:cardElevation="10dp"
    android:id="@+id/card_item"
    android:background="@drawable/card_background"
    app:cardBackgroundColor="@color/red"
    >
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp">

        <ImageView
            android:id="@+id/item_favorite_task_imageview"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:scaleType="centerCrop"
            android:src="@drawable/ic_favorite_task_item_page"/>

        <TextView
            android:id="@+id/item_favorite_task_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@id/item_favorite_task_imageview"
            android:textSize="20sp"
            android:textStyle="bold"
            android:text="@string/title_of_task"/>

        <TextView
            android:id="@+id/item_favorite_task_creator"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/item_favorite_task_title"
            android:layout_toRightOf="@id/item_favorite_task_imageview"
            android:textSize="16sp"
            android:text="@string/current_user"/>

        <TextView
            android:id="@+id/item_favorite_task_start_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/item_favorite_task_creator"
            android:layout_toRightOf="@id/item_favorite_task_imageview"
            android:textSize="16sp"
            android:text="@string/date"/>

        <TextView
            android:id="@+id/item_favorite_task_end_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/item_favorite_task_start_date"
            android:layout_toRightOf="@id/item_favorite_task_imageview"
            android:textSize="16sp"
            android:text="@string/date"/>

    </RelativeLayout>

</androidx.cardview.widget.CardView>